--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
     "pug": "^3.0.0",
     "pug-loader": "^2.4.0",
     "pug-plain-loader": "^1.0.0",
+    "resolve-url-loader": "^3.1.1",
     "sass-loader": "^9.0.2",
     "sass-resources-loader": "^2.0.3",
     "style-loader": "^1.2.1",
+    "swiper": "^6.3.3",
     "vue": "^2.6.11",
     "vue-loader": "^15.9.3",
     "vue-style-loader": "^4.1.2",
